--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "2.9.0",
+    "@skeletonlabs/tw-plugin": "0.3.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.10",
+    "autoprefixer": "10.4.18",
+    "postcss": "8.4.35",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "3.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
-    "postcss": "8.4.35",
-    "autoprefixer": "10.4.18",
-    "tailwindcss": "3.4.1",
-    "@skeletonlabs/skeleton": "2.9.0",
-    "@skeletonlabs/tw-plugin": "0.3.1",
-    "vite-plugin-tailwind-purgecss": "0.2.0",
-    "@tailwindcss/typography": "0.5.10",
-    "@tailwindcss/forms": "0.5.7"
+    "vite-plugin-tailwind-purgecss": "0.2.0"
   },
   "type": "module",
   "dependencies": {
+    "@floating-ui/dom": "1.6.3",
+    "@getalby/sdk": "^3.4.0",
+    "@nostr-dev-kit/ndk": "^2.5.0",
     "highlight.js": "11.9.0",
-    "@floating-ui/dom": "1.6.3"
+    "websocket-polyfill": "^1.0.0"
   }
 }
