--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@nostr-dev-kit/ndk": "^2.5.0",
     "@nostr-dev-kit/ndk-svelte": "^2.2.7",
     "@nostr-dev-kit/ndk-svelte-components": "^2.2.7",
+    "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify",
     "highlight.js": "11.9.0",
     "javascript-time-ago": "^2.5.9",
+    "nostr-tools": "^2.5.0",
     "websocket-polyfill": "^1.0.0"
   }
 }
